[package]
name = "jupiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.66"
chrono = { version = "0.4.19", features = ["serde"] }
colored = "2.0.0"
dotenv = "0.15.0"
serde = "1.0.147"
serde_json = "1.0"
serde-value = "0.7.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "time", "chrono", "offline"] }
thiserror = "1.0.37"

[alias]
prisma = "run --bin prisma --"

[[bin]]
name = "jupiter"
path = "src/main.rs"